Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11390

sanity-quota test_61: test timeout

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • Lustre 2.12.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for sarah <sarah@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/4b207cce-b97d-11e8-9df3-52540065bddc

      test_61 failed with the following error:

      Timeout occurred after 1369 mins, last suite running was sanity-quota, restarting cluster to continue tests
      

      cannot find error msg

      test log

      set to use default quota
      set default quota
      get default quota
      Disk default grp quota:
           Filesystem   bquota  blimit  bgrace   iquota  ilimit  igrace
          /mnt/lustre  20480   20480       0      0       0  604800
      Test not out of quota
      running as uid/gid/euid/egid 60000/60000/60000/60000, groups:
       [dd] [if=/dev/zero] [bs=1M] [of=/mnt/lustre/d61.sanity-quota/f61.sanity-quota-0] [count=10] [oflag=sync]
      10+0 records in
      10+0 records out
      10485760 bytes (10 MB) copied, 343.958 s, 30.5 kB/s
      Test out of quota
      CMD: trevis-38vm4 lctl set_param -n os[cd]*.*MDT*.force_sync=1
      CMD: trevis-38vm3 lctl set_param -n osd*.*OS*.force_sync=1
      running as uid/gid/euid/egid 60000/60000/60000/60000, groups:
       [dd] [if=/dev/zero] [bs=1M] [of=/mnt/lustre/d61.sanity-quota/f61.sanity-quota-0] [count=40] [oflag=sync]
      dd: error writing '/mnt/lustre/d61.sanity-quota/f61.sanity-quota-0': Disk quota exceeded
      19+0 records in
      18+0 records out
      18874368 bytes (19 MB) copied, 636.705 s, 29.6 kB/s
      Increase default quota
      CMD: trevis-38vm4 lctl set_param -n os[cd]*.*MDT*.force_sync=1
      CMD: trevis-38vm3 lctl set_param -n osd*.*OS*.force_sync=1
      running as uid/gid/euid/egid 60000/60000/60000/60000, groups:
       [dd] [if=/dev/zero] [bs=1M] [of=/mnt/lustre/d61.sanity-quota/f61.sanity-quota-0] [count=40] [oflag=sync]
      40+0 records in
      40+0 records out
      41943040 bytes (42 MB) copied, 124.211 s, 338 kB/s
      Set quota to override default quota
      CMD: trevis-38vm4 lctl set_param -n os[cd]*.*MDT*.force_sync=1
      CMD: trevis-38vm3 lctl set_param -n osd*.*OS*.force_sync=1
      running as uid/gid/euid/egid 60000/60000/60000/60000, groups:
       [dd] [if=/dev/zero] [bs=1M] [of=/mnt/lustre/d61.sanity-quota/f61.sanity-quota-0] [count=40] [oflag=sync]
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-quota test_61 - Timeout occurred after 1369 mins, last suite running was sanity-quota, restarting cluster to continue tests

            hongchao.zhang Hongchao Zhang
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: